--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,15 @@
 canvas {
   border: 1px solid black;
 }
+table {
+  border: 1px solid black;
+}
+table tr {
+  border: 1px solid black;
+}
+
+/* body {
+  background-image: url('https://i.postimg.cc/1RpyhQT6/jiyuu-no-tsubasa.png');
+  color: white;
+}
+ */
